# funinstall

./: README.md  pyproject.toml
docs/: API.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md
src/funinstall/: command.py
src/funinstall/install/: __init__.py  base.py  brew.py  code_server.py  command.py  frpc.py  go.py  mcphub.py  newapi.py  nodejs.py  oneapi.py  onehub.py  ossutil.py  uif.py  utils.py  v2rayA.py
src/funinstall/install/funjupyter/: run.py
