[project]
name = "funinstall"
version = "1.0.67"
description = "funinstall 快速安装一些开发工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funsecret>=1.4.64", "funserver>=1.0.59", "funshell>=1.0.5", "nltlog>=1.0.14",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funinstall"
Releases = "https://github.com/farfarfun/funinstall/releases"

[project.scripts]
funinstall = "funinstall.command:funinstall"
funonehub = "funinstall.install.onehub:funonehub"

[tool.setuptools]
license-files = []

[tool.uv]
package = true
